[gd_scene load_steps=6 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://title.png" type="Texture" id=2]
[ext_resource path="res://gamepad1.png" type="Texture" id=3]
[ext_resource path="res://gamepad2.png" type="Texture" id=4]
[ext_resource path="res://warning.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 601.0

[node name="title" type="Sprite" parent="Control"]
position = Vector2( 514.6, 152.6 )
texture = ExtResource( 2 )

[node name="NewGameButton" type="Button" parent="Control"]
margin_left = 348.0
margin_top = 213.0
margin_right = 660.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 176.08, 18.4165 )
text = "New Game"

[node name="TopScoresButton" type="Button" parent="Control"]
margin_left = 345.0
margin_top = 271.0
margin_right = 657.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 176.08, 18.4165 )
text = "Top Scores"

[node name="Player1" type="Control" parent="Control"]
margin_left = 231.0
margin_top = 345.0
margin_right = 271.0
margin_bottom = 385.0

[node name="gamepad1" type="Sprite" parent="Control/Player1"]
position = Vector2( 51.6, 62.6 )
texture = ExtResource( 3 )

[node name="Prompt" type="Label" parent="Control/Player1"]
margin_left = -65.0
margin_top = 136.936
margin_right = 185.0
margin_bottom = 167.936
text = "Player 1
Press W,A,S,D or Joystick Button to Join"
align = 1

[node name="Joined" type="Label" parent="Control/Player1"]
visible = false
margin_left = 9.30042
margin_top = 144.932
margin_right = 107.3
margin_bottom = 158.932
text = "Player 1 Joined!"

[node name="Player2" type="Control" parent="Control"]
margin_left = 664.0
margin_top = 354.0
margin_right = 704.0
margin_bottom = 394.0

[node name="gamepad2" type="Sprite" parent="Control/Player2"]
position = Vector2( 51.6, 53.6 )
texture = ExtResource( 4 )

[node name="Prompt" type="Label" parent="Control/Player2"]
margin_left = -65.0
margin_top = 129.0
margin_right = 185.0
margin_bottom = 160.0
text = "Player 2
Press I,J,K,L or Joystick Button to Join"
align = 1

[node name="Joined" type="Label" parent="Control/Player2"]
visible = false
margin_left = 11.095
margin_top = 138.257
margin_right = 109.095
margin_bottom = 152.257
text = "Player 2 Joined!"

[node name="JoystickWarning" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="warning" type="Sprite" parent="JoystickWarning"]
position = Vector2( 313.371, 32.6064 )
scale = Vector2( 0.612483, 0.519478 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="JoystickWarning"]
margin_left = 352.641
margin_top = 29.4513
margin_right = 696.641
margin_bottom = 43.4513
text = "This game is best played with 2 players on gamepads!"
[connection signal="pressed" from="Control/NewGameButton" to="." method="_on_NewGameButton_pressed"]
